# hedgehog-escrow

./: .editorconfig  .env.sample  .eslintignore  .eslintrc  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  Anchor.toml  Cargo.toml  Containerfile  LICENSE  README.md  compose.yml  constraints.pro  jest.config.cjs  jest.config.mjs  package.json  tsconfig.json
.yarn/patches/: @project-serum-anchor-npm-0.25.0-7e5041bc3a.patch
accounts/escrow/: global2.json
libs/common/: Cargo.toml
libs/common/src/: bps.rs  lib.rs  macros.rs  math.rs  traits.rs
libs/common/src/sys/: mock.rs  mod.rs
migrations/: deploy.ts
patches/: @project-serum+anchor+0.23.0.patch
programs/hh-escrow/: Cargo.toml
programs/hh-escrow/src/: error.rs  lib.rs  utils.rs
programs/hh-escrow/src/instructions/: claim.rs  deposit.rs  initialize_global_state.rs  initialize_market.rs  initialize_user_position.rs  mod.rs  resolver_acknowledge.rs  set_global_state.rs  update_outcome.rs  update_state.rs  withdraw.rs
programs/hh-escrow/src/state/: bps.rs  global_state.rs  market.rs  mod.rs  outcome.rs  uri.rs  user_position.rs
programs/hh-escrow/src/utils/: mod.rs
programs/hyperspace-resolver/: Cargo.toml
programs/hyperspace-resolver/src/: error.rs  lib.rs  macros.rs
programs/hyperspace-resolver/src/instructions/: acknowledge_nft_floor.rs  initialize_nft_floor.rs  mod.rs  resolve_nft_floor.rs
programs/hyperspace-resolver/src/state/: mod.rs  nft_floor.rs
programs/hyperspace-resolver/src/utils/: mod.rs
programs/switchboard-resolver/: Cargo.toml
programs/switchboard-resolver/src/: error.rs  lib.rs  macros.rs  utils.rs
programs/switchboard-resolver/src/instructions/: initialize.rs  mod.rs  resolve.rs
programs/switchboard-resolver/src/state/: resolver.rs
programs/switchboard-updater/: Cargo.toml
programs/switchboard-updater/src/: lib.rs
scripts/: build.ts  test.ts  test_deploy  utils.ts  validator.ts
tests/: custom-matchers.d.ts  hh-escrow.ts  matchers.ts  provider.ts  u64.ts  utils.ts
tests/hh-escrow/: claim.disabled.ts  claim.spec.ts  claimFlaky.disabled.ts  claimFlaky.spec.ts  deposit.spec.ts  initializeGlobalState.disabled.ts  initializeGlobalState.spec.ts  initializeMarket.spec.ts  initializeMarket.ts  initializeUserPosition.spec.ts  initializeUserPosition.ts  resolverAcknowledged.spec.ts  setGlobalState.disabled.ts  setGlobalState.spec.ts  updateOutcome.spec.ts  updateState.disabled.ts  updateState.spec.ts  utils.ts  withdraw.spec.ts  withdrawFlaky.disabled.ts  withdrawFlaky.spec.ts
tests/hyperspace-resolver/: acknowledgeNftFloor.spec.ts  initializeNftFloor.spec.ts  initializeNftFloorFlaky.spec.ts  resolveNftFloor.spec.ts  resolveNftFloorFlaky.spec.ts  utils.ts
tests/utils/: accounts.ts  alloc.ts  chain.ts  constants.ts  idl.ts  index.ts  instructions.ts  misc.ts  spl.ts  transaction.ts
tests/utils/bigint/: bn.ts  index.ts  u64.ts
ts/: hh-escrow.ts  hyperspace-resolver.ts  switchboard-resolver.ts
ts/__tests__/hh-escrow/: claim.spec.ts  claimFlaky.spec.ts  deposit.spec.ts  initializeGlobalState.spec.ts  initializeMarket.spec.ts  initializeUserPosition.spec.ts  resolverAcknowledged.spec.ts  setGlobalState.spec.ts  updateOutcome.spec.ts  withdraw.spec.ts  withdrawFlaky.spec.ts
ts/__tests__/hyperspace-resolver/: acknowledgeNftFloor.spec.ts  initializeNftFloor.spec.ts  initializeNftFloorFlaky.spec.ts  resolveNftFloor.spec.ts  resolveNftFloorFlaky.spec.ts
ts/__tests__/switchboard-resolver/: initialize.spec.ts  resolve.spec.disabled.ts  resolveFlaky.spec.ts
ts/setup/: custom-matchers.d.ts  env.ts  matchers.ts  provider.ts
ts/switchboard/: index.ts  switchboard.d.ts  types.ts
ts/utils/: accounts.ts  chain.ts  constants.ts  idl.ts  index.ts  instructions.ts  misc.ts  rpc.ts  spl.ts  system.ts  transaction.ts  types.ts
ts/utils/bigint/: bn.ts
