[package]
name = "common"
version = "0.1.0"
description = "Common utilities used by programs"
edition = "2021"
rust-version = "1.59"

[dependencies]
rustversion = "1.0"

anchor-lang = "0.24.2"
solana-program = "1.9.16"

arrayref = "0.3.6"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
