[package]
name = "hh-escrow"
version = "1.0.0"
description = "Program for P2P predictions"
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "lib"]
name = "hh_escrow"

[features]
default = []

no-entrypoint = []
no-idl = []
no-log-ix-name = []

cpi = ["no-entrypoint"]

[dependencies]
common = { path = "../../libs/common" }

anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.13"
spl-associated-token-account = "1.0.5"
