[package]
name = "hyperspace-resolver"
version = "0.1.0"
description = "Resolver for P2P markets based on Hyperspace.xyz"
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyperspace_resolver"

[features]
default = []

no-entrypoint = []
no-idl = []
no-log-ix-name = []

cpi = ["no-entrypoint"]

[dependencies]
common = { path = "../../libs/common" }
hh-escrow = { path = "../hh-escrow", features = ["cpi"] }

anchor-lang = "0.24.2"
solana-program = "1.9"

borsh = { version = "0.9.3", features = ["const-generics"] }

[dev-dependencies]
quickcheck = "1.0"
