[package]
name = "switchboard-resolver"
version = "0.1.0"
description = "Resolver for P2P markets based on Switchboard"
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_resolver"

[features]
default = []

no-entrypoint = []
no-idl = []
no-log-ix-name = []

cpi = ["no-entrypoint"]

[dependencies]
common = { path = "../../libs/common" }
hh-escrow = { path = "../hh-escrow", features = ["cpi"] }

anchor-lang = "0.24.2"
solana-program = "1.9"

switchboard-v2 = { version = "0.1.11", features = ["cpi"] }

borsh = { version = "0.9.3", features = ["const-generics"] }
