[package]
name = "switchboard-updater"
version = "0.1.0"
description = "Switchboard feed oracle"
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_updater"

[features]
default = []

no-entrypoint = []
no-idl = []
no-log-ix-name = []

cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.24.2"
